{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 194,
  "lineage": "a150b980-e562-8987-a6c3-a412fe6e0f0c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-08T09:47:13.325-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/quantum-coasters/global/firewalls/tf-www-firewall",
            "log_config": [],
            "name": "tf-www-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/global/networks/default",
            "priority": 1000,
            "project": "quantum-coasters",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/global/firewalls/tf-www-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "www-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-09-08T09:47:13.302-07:00",
            "deny": [],
            "description": "Firewall rule allows all Egress traffic from all IPs and all ports.",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/quantum-coasters/global/firewalls/egress-allow-all",
            "log_config": [],
            "name": "egress-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/global/networks/default",
            "priority": 1000,
            "project": "quantum-coasters",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/global/firewalls/egress-allow-all",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-09-08T09:49:03.736-07:00",
            "id": "projects/quantum-coasters/regions/us-central1/forwardingRules/tf-www-forwarding-rule",
            "ip_address": "34.133.193.250",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "tf-www-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "quantum-coasters",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/regions/us-central1/forwardingRules/tf-www-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/regions/us-central1/targetPools/tf-www-target-pool"
          },
          "dependencies": [
            "google_compute_http_health_check.default",
            "google_compute_instance.www",
            "google_compute_target_pool.default",
            "google_service_account.quantum_coasters_sa",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "www",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1404-trusty-v20160602",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/zones/us-central1-c/disks/tf-www-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/quantum-coasters/zones/us-central1-c/instances/tf-www-0",
            "instance_id": "8387138484448876540",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC5ueL3zUdOeF433S87BKBpvHCrwOssanVGe///yoe/cw8jMCvN3sEzUJyoIZP+GPhg1muOgpuPRmCH/Fh6HlzPkYU2MxhrJXGYyeEr2gaqk1uLGepS9oPxGSjZC7H+55QCkT66qXb99/ajkx7Scu4ivkod8CdiK/am3P7jPoZUC5SNMsCgP48D6xFeGNClr/kRVr+lJbTb1GThdidpfD1LyP09DGL0wgONJG1ekF0XGwAjbETUpAbFI89sCx8I5gLkZgK5PQjCIe5nkJLX+OmNcdM52XqkJHmIeyg+yvO5ahyxpO0dV0KPBuY0INC4S2YtbYmVF9cUESpKUbnXeiDoBwxrXm7Yg9vN24yEDersIN5JaSFAJohM9Vfuk++5M2s1wnSR6nzIeZor4V9/k1HkrUl3mVAiZqrwN7YFT8753Z9Z [...]
            },
            "metadata_fingerprint": "FxRmnUajf4w=",
            "name": "tf-www-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.71.169.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/global/networks/default",
                "network_ip": "10.128.0.58",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/regions/us-central1/subnetworks/default",
                "subnetwork_project": "quantum-coasters"
              }
            ],
            "project": "quantum-coasters",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/zones/us-central1-c/instances/tf-www-0",
            "service_account": [
              {
                "email": "quantum-coasters-sa-0e6f43f9@quantum-coasters.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "tags": [
              "www-node"
            ],
            "tags_fingerprint": "hOwvn4SsPrU=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_service_account.quantum_coasters_sa",
            "random_id.instance_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1404-trusty-v20160602",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/zones/us-central1-c/disks/tf-www-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/quantum-coasters/zones/us-central1-c/instances/tf-www-1",
            "instance_id": "2620952062717155324",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC5ueL3zUdOeF433S87BKBpvHCrwOssanVGe///yoe/cw8jMCvN3sEzUJyoIZP+GPhg1muOgpuPRmCH/Fh6HlzPkYU2MxhrJXGYyeEr2gaqk1uLGepS9oPxGSjZC7H+55QCkT66qXb99/ajkx7Scu4ivkod8CdiK/am3P7jPoZUC5SNMsCgP48D6xFeGNClr/kRVr+lJbTb1GThdidpfD1LyP09DGL0wgONJG1ekF0XGwAjbETUpAbFI89sCx8I5gLkZgK5PQjCIe5nkJLX+OmNcdM52XqkJHmIeyg+yvO5ahyxpO0dV0KPBuY0INC4S2YtbYmVF9cUESpKUbnXeiDoBwxrXm7Yg9vN24yEDersIN5JaSFAJohM9Vfuk++5M2s1wnSR6nzIeZor4V9/k1HkrUl3mVAiZqrwN7YFT8753Z9Z [...]
            },
            "metadata_fingerprint": "FxRmnUajf4w=",
            "name": "tf-www-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.191.200",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/global/networks/default",
                "network_ip": "10.128.0.59",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/regions/us-central1/subnetworks/default",
                "subnetwork_project": "quantum-coasters"
              }
            ],
            "project": "quantum-coasters",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/quantum-coasters/zones/us-central1-c/instances/tf-www-1",
            "service_account": [
              {
                "email": "quantum-coasters-sa-0e6f43f9@quantum-coasters.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "tags": [
              "www-node"
            ],
            "tags_fingerprint": "hOwvn4SsPrU=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_service_account.quantum_coasters_sa",
            "random_id.instance_id"
          ]
        }
      ]
    }
  ]
}